--- a/Buchungstrainer/src/app.html
+++ b/Buchungstrainer/src/app.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-	<meta charset="UTF-8" />
-	<title>SPA SDK Sample</title>
-	<link rel="stylesheet" type="text/css" href="/css/main.css" />
+	<meta charset="utf-8" />
+	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+		integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
+	%sveltekit.head%
 </head>
 
-<body>
-	<h2>SPA Authentication Sample</h2>
-	<p>Welcome to our page!</p>
-	<button id="btn-login" disabled="true" onclick="login()">Log in</button>
-	<button id="btn-logout" disabled="true" onclick="logout()">Log out</button>
+<body data-sveltekit-preload-data="hover">
+	<div style="display: contents">%sveltekit.body%</div>
+	<div id="title">
+		<h2>Buchungstrainer</h2>
+		<p>Welcome to our page!</p>
+	</div>
+
+	<div id="buttons">
+		<button id="btn-login" disabled="true" onclick="login()">Log in</button>
+		<button id="btn-logout" disabled="true" onclick="logout()">Log out</button>
+	</div>
 	
 	<script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
 	<script src="./public/js/app.js"></script>
